Rename MCPRuntimeContextBuilder